Offline example: added css style template

--- a/examples/offline/offline.html
+++ b/examples/offline/offline.html
@@ -1,6 +1,14 @@
 <html manifest="/cache.manifest">
 <head>
     <title>Bachelorproef 2015 - offline</title>
+    <!-- todo: update css style -->
+    <style>
+        #info {}
+        #info ol {}
+        #info li {}
+        #manifest-message {}
+        #offline {}
+    </style>
 </head>
 
 <body>
