Main index file should contain links to the test examples.

--- a/dev/offline/index.html
+++ b/dev/offline/index.html
@@ -21,6 +21,8 @@
     </ol>
 </div>
 
+<div id="navigator-online">navigator.onLine: <span id="navigator-online-value"></span></div>
+
 <div id="manifest-message"></div>
 
 <div id="offline"></div>
